<resources>
    <string name="app_name">Traffety</string>
    <string name="phone">Phone number</string>
    <string name="step">Next step</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="forgotPassword">Mot de passe oublié ?</string>
    <string name="remember">Se souvenir </string>
    <string name="entreprise"> Menu entreprise</string>
    <string name="perso"> Menu Particulier</string>
    <string name="title_activity_acceuil">Acceuil</string>
    <string name="submit">Valider</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_up">Ouvrir un compte</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
